sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:4: error: recursive variable ecart needs type
  var ecart = (ecart.toDouble / 1.3).toInt
               ^